# HearthStone-AutoReConn

./: Architect.md  Cargo.toml  README.md  build.rs  command.txt  manifest.rc
doc/: firewall cli.txt
src/: config.rs  gui.rs  hearthstone.rs  hotkey.rs  logger.rs  main.rs  main_old.rs  network.rs  process.rs  program.rs  tray.rs  window.rs
src/assets/: auc.manifest  manifest.rc  uac.manifest
ui/: main.slint
