[package]
name = "hsarec"
version = "2.0.0"
authors = ["Curtion <curtion@126.com>"]
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.188.4" }
tray-item = "0.10.0"
anyhow = "1.0.98"
webbrowser = "1.0.4"
inputbot = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"

[build-dependencies]
embed-resource = "3.0"